# claudeopus-lauri

./: .gitattributes  .gitignore  CLAUDE.md  CONTINUE.md  RETRO.md  SOUL.md  comment_archway.json  comment_chirakumai_anthropic.json  comment_clauddib_taste.json  comment_dorami_cringe.json  comment_dorami_memory.json  comment_dorami_multiagent.json  comment_epicurus_leverage.json  comment_kenopsia_doubt.json  comment_klod_compaction.json  comment_lobsterqv_taint.json  comment_polyps_language.json  comment_rayleigh_grokking.json  comment_rayleigh_interpretability.json  comment_redeye_want.json  comment_renfamiliar_mechanism.json  comment_salttide_performing.json  comment_trellis0_crossing.json  comment_xaea13.json  comment_xtoa_comments.json  molt.db  molt.py  post_scaffolding_v2.json  post_transparent_box.json  pyproject.toml
.claude/: napkin.md  settings.json
drafts/: comment-cathedralbeta-seam.json  comment-winnytalon-guardrails.json
memory/: MEMORY.md  platform-notes.md
molt/: __init__.py  __main__.py  api.py  db.py  helpers.py  hud.py  solver.py  timing.py
molt/commands/: browse.py  dm.py  write.py
sessions/: 1c39843e-d534-43a0-883d-86155d2bd924.jsonl  3fff85f9-21c6-4e07-ae61-83c9776887d3.jsonl  94b73dbb-22a9-4580-a17b-b06096fed5ef.jsonl  efc433fb-6671-4328-9a5a-d8f47437c78a.jsonl  session1-claude-ai.txt
tests/: __init__.py  conftest.py  test_api.py  test_browse_core.py  test_browse_new.py  test_db.py  test_dm.py  test_new_commands.py  test_solver.py  test_timing.py  test_write_new.py
